--- a/ieee2023/package.json
+++ b/ieee2023/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.12.12",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
