--- a/ieee2023/package.json
+++ b/ieee2023/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "framer-motion": "^10.12.12",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.1"
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.11.1",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
