--- a/ieee2023/package.json
+++ b/ieee2023/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.1",
     "framer-motion": "^10.12.12",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
