--- a/ieee2023/package.json
+++ b/ieee2023/package.json
@@ -19,7 +19,9 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
