--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.0.1",
+    "@sanity/client": "^6.10.0",
+    "@sanity/image-url": "^1.0.2",
     "framer-motion": "^10.12.12",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
